hphp/hack/test/typecheck/exponential_2.php.exp
File "exponential_2.php", line 4, characters 8-12:
Typing error (Typing[4429])
  File "exponential_2.php", line 4, characters 8-18:
  Expected `num` because this is used in an arithmetic operation
  File "exponential_2.php", line 4, characters 8-12:
  But got `bool`
