hphp/hack/test/typecheck/exponential_2.php
<?hh // strict

function error(): void {
  $c = false ** 10;
}
